# muxml-rust

./: COPYRIGHT  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  muxml_types.rs  score.rs  ser.rs
src/test/: mod.rs  ser_test.rs
test/data/: simple.musicxml
