[package]
license = "GPL-3.0-only"
authors = ["Robert Bermani <bobbermani@gmail.com>"]
description = "A Rust library for serializing and deserializing MusicXML files to an intermediate representation."
homepage = "https://github.com/rbermani/muxml-rust"
name = "muxml"
version = "0.1.1"
edition = "2021"
readme = "README.md"
keywords = ["musicxml", "serialization", "deserialization"]
categories = ["encoding"]
#include = ["COPYRIGHT", "LICENSE"]

[lib]
name = "muxml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.14.0"
env_logger = "0.10.0"
log = "0.4.20"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.181", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.49"
normalize-line-endings = "0.3.0"

